[gd_scene load_steps=20 format=3 uid="uid://cafwwxkckh345"]

[ext_resource type="Script" uid="uid://bysjk40gw4iyf" path="res://Scripts/sprite_base.gd" id="1_xg5y0"]
[ext_resource type="Texture2D" uid="uid://bfikhkmebh1ss" path="res://Sprites/Player_1.png" id="2_8d083"]
[ext_resource type="Script" uid="uid://bdel5w2lwam25" path="res://Scripts/pathfinder_component.gd" id="3_21vma"]
[ext_resource type="Script" uid="uid://bs44xfwkdxl5t" path="res://Scripts/state_component.gd" id="4_iuv37"]
[ext_resource type="Script" uid="uid://cry7jqv88tijc" path="res://Scenes/movement_component.gd" id="5_8d083"]

[sub_resource type="AtlasTexture" id="AtlasTexture_v4w6j"]
atlas = ExtResource("2_8d083")
region = Rect2(230, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_482mg"]
atlas = ExtResource("2_8d083")
region = Rect2(184, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_gowlk"]
atlas = ExtResource("2_8d083")
region = Rect2(184, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_d20v5"]
atlas = ExtResource("2_8d083")
region = Rect2(207, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_bq5a3"]
atlas = ExtResource("2_8d083")
region = Rect2(92, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gpr"]
atlas = ExtResource("2_8d083")
region = Rect2(115, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_we1eg"]
atlas = ExtResource("2_8d083")
region = Rect2(138, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_meo52"]
atlas = ExtResource("2_8d083")
region = Rect2(161, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8gha"]
atlas = ExtResource("2_8d083")
region = Rect2(0, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a2b7"]
atlas = ExtResource("2_8d083")
region = Rect2(23, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_5tqls"]
atlas = ExtResource("2_8d083")
region = Rect2(46, 0, 22, 44)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt28u"]
atlas = ExtResource("2_8d083")
region = Rect2(69, 0, 22, 44)

[sub_resource type="SpriteFrames" id="SpriteFrames_snh8b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4w6j")
}],
"loop": false,
"name": &"enter",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_482mg")
}],
"loop": false,
"name": &"exit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gowlk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d20v5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bq5a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we1eg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meo52")
}],
"loop": true,
"name": &"walk_to_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8gha")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a2b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5tqls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt28u")
}],
"loop": true,
"name": &"walk_to_right",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6c7d7"]

[node name="SpriteBase" type="Area2D" node_paths=PackedStringArray("state_manager", "pathfinder", "movement")]
script = ExtResource("1_xg5y0")
state_manager = NodePath("State_Component")
pathfinder = NodePath("Pathfinder_Component")
movement = NodePath("Movement_Component")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_snh8b")
animation = &"exit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_6c7d7")

[node name="Pathfinder_Component" type="Node" parent="."]
script = ExtResource("3_21vma")

[node name="State_Component" type="Node" parent="."]
script = ExtResource("4_iuv37")

[node name="Movement_Component" type="Node" parent="."]
script = ExtResource("5_8d083")
